5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/1407/executions/1577_994.log
== TEST (2019-03-13 10:22:03) 
-- CODE:
print( Bruce Wayne") 
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne") 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:25) 
-- CODE:
print( Bruce Wayne") 
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne") 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:31:18) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:39:25) 
-- CODE:
print( Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print( Bruce Wayne")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
